# geometric_lib

./: pyproject.toml
.github/workflows/: main.yml
src/: circle.py
tests/: pytest.ini
tests/unit/: cases.py  test_math_formuls.py
