[tool.poetry]
name = "geometric-lib"
version = "0.1.0"
description = "lib for heometric calculations"
authors = ["BlackDalekk <bakaev_ivan@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
coverage = "^7.6.9"
pytest = "^8.3.4"
parameterized = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

